test/integration/good/warning/deprecated_syntax.stan
functions {
  real foo_jacobian(real x, int y) {
    return x + y;
  }
}
transformed data {

}
parameters {
}
model {
  if (1 < 2 < 3 < 4) {
    // multiple comparisons
  }
}
